[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprites/BasketballHoop.png" type="Texture" id=1]
[ext_resource path="res://Scenes/BasketHoop.gd" type="Script" id=2]
[ext_resource path="res://Fonts/Symtext.ttf" type="DynamicFontData" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 17, 0 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 20, 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[node name="BasketHoop" type="StaticBody2D"]
z_index = -1
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )

[node name="ScoreArea" type="Area2D" parent="."]

[node name="ScoreCollision" type="CollisionShape2D" parent="ScoreArea"]
position = Vector2( 0, 24 )
shape = SubResource( 1 )

[node name="RingCollision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 24 )
rotation = 3.14159
shape = SubResource( 2 )
one_way_collision = true

[node name="ValueLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -29.0
margin_top = -43.0
margin_right = 31.0
margin_bottom = -19.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "0"
align = 1
valign = 1

[connection signal="body_entered" from="ScoreArea" to="." method="_on_Area2D_body_entered"]
